# Jacques

./: .gitignore  LICENSE  README.md  demo.py  evaluate.py  evaluate_polars.py  main.py  pyproject.toml  requirements.txt  research_check.sh  rules_exported.py  server.py  td_generator.py  td_generator_v2.py
demos/: cross_match_demo.py
docs/: conf.py  genindex.html  jacques.ast.html  jacques.ast.rst  jacques.html  jacques.tests.rst  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: jacques.rst.txt
documentation/: Untitled Diagram.drawio  big_picture.drawio  design.drawio  flow  matcher.md  questions.md
jacques/: j_ast.py  jast.py  jast_utils.py  matcher.py  problem_knowledge.py  python_ast_utils.py  rule.py  ruleset_synthesizer.py  utils.py  world_knowledge.py
jacques/ast/: jacques_ast.py  jacques_ast_utils.py  python_ast_arg_replacer.py  python_ast_heur_comparer.py  python_ast_utils.py
jacques/core/: arguments.py  example.py  jacques.py  jacques_member.py  matcher.py  nldsl_utils.py  rule.py  rule_synthesizer.py
jacques/parser/: dsl_parser.py  parser.py  python_parser.py
jacques/parsers/: dsl_parser.py  python_parser.py
output/: L2_R2.py  L4_R1.py  L6_R1.5.py  L6_R2.py
research/: pandas.csv  pandas.tex  polars.csv  polars.tex  prep.ipynb  spark.csv  spark.tex
src/jacques/: __init__.py  constants.py  server.py  utils.py  world_knowledge.py
tests/: __init__.py  helpers.py  test_dsl_parser.py  test_jacques.py  test_jast.py  test_python_parser.py
training_examples/blank/: L1_R1.py  L4_R1.5.py  (+2 more)
(+62 files in other folders)
